security: CVE fixes (#854)
security: Upgraded to Jetty 12 to resolve CVE issues

Signed-off-by: dhoard <doug.hoard@gmail.com>
Co-authored-by: Ben Kochie <superq@gmail.com>